# llmops_rag_poc

rag_poc_0203/: .env.example  .gitignore  CURRICULUM.md  OPERATOR_MANUAL.md  PRESENTATION.md  README.md  TEST_GUIDE.md  USER_MANUAL.md  chat.db  docker-compose.yml  pyproject.toml  start_all.sh  설명.md
rag_poc_0203/app/agents/: advanced_agent.py  simple_agent.py
rag_poc_0203/app/api/: openapi_generator.py  server.py
rag_poc_0203/app/core/: config.py  database.py  prompts.py
rag_poc_0203/app/models/: router.py
rag_poc_0203/app/ops/: evaluator.py  monitor.py  router_logic.py
rag_poc_0203/app/rag/: graph_logic.py  query_logic.py  retriever.py  web_tools.py
rag_poc_0203/app/ui/: streamlit_app.py
rag_poc_0203/dify/: .env.example  docker-compose.yaml  marketplace_patch.py  ssrf_proxy_patch.py
rag_poc_0203/dify/unused_patches/: version_patch.py
rag_poc_0203/scripts/: diagnose_qdrant.py  run_eval.py  seed_prompts.py  test_metadata.py  verify_phase2.py  verify_phase3.py  verify_phase4_mq.py  verify_phase4_streaming.py  verify_phase5.py  verify_phase6_graph.py  verify_tuning.py
